--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,20 +21,21 @@
         <activity android:name=".SignUpSetLocation" />
         <activity android:name=".SignUpFarmerAddPhotos" />
         <activity android:name=".SignUpTransporterAddPhotos" />
-        <activity android:name=".SignUpLater"></activity>
-        <activity android:name=".FarmerBeginRequestPickup"/>
-        <activity android:name=".FarmerEditProfile"/>
-        <activity android:name=".FarmerViewHistory"/>
-        <activity android:name=".FarmerViewHistoryDetail"/>
-        <activity android:name=".FarmerRequestPickupPickDate"/>
-        <activity android:name=".FarmerRequestPickupSetPickupLocation"/>
-        <activity android:name=".FarmerRequestPickupSetPickupLocationType"/>
-        <activity android:name=".FarmerRequestPickupSetDropoffLocation"/>
-        <activity android:name=".FarmerRequestPickupChooseTransporter"/>
-        <activity android:name=".FarmerRequestPickupViewTransporterDetails"/>
-        <activity android:name=".FarmerRequestPickupEnterPayment"/>
-        <activity android:name=".FarmerRequestPickupReviewOrder"/>
-        <activity android:name=".FarmerRequestPickupOrderConfirmation"/>
+        <activity android:name=".SignUpLater" />
+        <activity android:name=".FarmerBeginRequestPickup" />
+        <activity android:name=".FarmerEditProfile" />
+        <activity android:name=".FarmerViewHistory" />
+        <activity android:name=".FarmerViewHistoryDetail" />
+        <activity android:name=".FarmerRequestPickupPickDate" />
+        <activity android:name=".FarmerRequestPickupSetPickupLocation" />
+        <activity android:name=".FarmerRequestPickupSetPickupLocationType" />
+        <activity android:name=".FarmerRequestPickupSetDropoffLocation" />
+        <activity android:name=".FarmerRequestPickupChooseTransporter" />
+        <activity android:name=".FarmerRequestPickupViewTransporterDetails" />
+        <activity android:name=".FarmerRequestPickupEnterPayment" />
+        <activity android:name=".FarmerRequestPickupReviewOrder" />
+        <activity android:name=".FarmerRequestPickupOrderConfirmation" />
+        <activity android:name=".CreateAccount"></activity>
     </application>
 
 </manifest>
