--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="22" />
@@ -23,7 +22,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDSypbiDSbbZeikhCxs6_UYhfxvKMszglY" />
@@ -54,7 +52,8 @@
         <activity android:name=".FarmerRequestPickupEnterPayment" />
         <activity android:name=".FarmerRequestPickupReviewOrder" />
         <activity android:name=".FarmerRequestPickupOrderConfirmation" />
-        <activity android:name=".CreateAccount"/>
+        <activity android:name=".CreateAccount" />
+        <activity android:name=".FarmerRequestPickupEnterAnotherPayment"></activity>
     </application>
 
 </manifest>
