--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,12 @@
         <activity android:name=".FarmerRequestPickupOrderConfirmation" />
         <activity android:name=".CreateAccount" />
         <activity android:name=".FarmerRequestPickupEnterAnotherPayment"></activity>
+        <activity android:name=".TransporterHome" />
+        <activity android:name=".TransporterViewSchedule" />
+        <activity android:name=".TransporterAddTripSetStartLocation" />
+        <activity android:name=".TransporterAddTripSetDestination" />
+        <activity android:name=".TransporterAddTripPickDate" />
+        <activity android:name=".CreateAccount"/>
     </application>
 
 </manifest>
