added infor for transporter pickup
added crops transporter can take and space transporter has

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".FarmerRequestPickupOrderConfirmation" />
         <activity android:name=".TransporterHome" />
         <activity android:name=".TransporterViewSchedule" />
+        <activity android:name=".TransporterSetAvailabilityEnterInfo" />
         <activity android:name=".TransporterSetAvailabilityPickDate" />
         <activity android:name=".TransporterSetAvailabilityLocationType" />
         <activity android:name=".Messages" />
