Added Bank Account functionality
Something broke though.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,13 +53,13 @@
         <activity android:name=".FarmerRequestPickupReviewOrder" />
         <activity android:name=".FarmerRequestPickupOrderConfirmation" />
         <activity android:name=".CreateAccount" />
-        <activity android:name=".FarmerRequestPickupEnterAnotherPayment"></activity>
+        <activity android:name=".FarmerRequestPickupEnterAnotherPayment" />
         <activity android:name=".TransporterHome" />
         <activity android:name=".TransporterViewSchedule" />
         <activity android:name=".TransporterAddTripSetStartLocation" />
         <activity android:name=".TransporterAddTripSetDestination" />
         <activity android:name=".TransporterAddTripPickDate" />
-        <activity android:name=".CreateAccount"/>
+        <activity android:name=".FarmerRequestPickupAddBankAccount"></activity>
     </application>
 
 </manifest>
