added history screens
added history screens for both farmer and transporter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         <activity android:name=".SignUpLater" />
         <activity android:name=".FarmerBeginRequestPickup" />
         <activity android:name=".FarmerEditProfile" />
-        <activity android:name=".FarmerViewHistory" />
+        <activity android:name=".FarmerHistory" />
         <activity android:name=".FarmerViewHistoryDetail" />
         <activity android:name=".FarmerRequestPickupPickDate" />
         <activity android:name=".FarmerRequestPickupSetPickupLocation" />
@@ -58,6 +58,7 @@
         <activity android:name=".TransporterViewSchedule" />
         <activity android:name=".TransporterMessages" />
         <activity android:name=".TransporterEditProfile" />
+        <activity android:name=".TransporterHistory" />
         <activity android:name=".TransporterSetAvailabilityEnterInfo" />
         <activity android:name=".TransporterSetAvailabilityPickDate" />
         <activity android:name=".TransporterSetAvailabilityLocationType" />
