--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="22" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -68,6 +70,7 @@
         <activity android:name=".SignUpTransporterAddProfile"/>
         <activity android:name=".SignUpSetCarInfoTransporter"/>
         <activity android:name=".SignUpSetLocationTransporter"/>
+        <activity android:name=".Loading"/>
     </application>
 
 </manifest>
