--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".BeginSignUp" />
-        <activity android:name=".SignUpNameNumber" />
-        <activity android:name=".SignUpSetLocation" />
+        <activity android:name=".SignUpFarmerSetLocation" />
         <activity android:name=".SignUpFarmerAddPhotos" />
         <activity android:name=".SignUpFarmerAddProfile" />
         <activity android:name=".SignUpTransporterAddPhotos" />
@@ -45,7 +44,6 @@
         <activity android:name=".FarmerBeginRequestPickup" />
         <activity android:name=".FarmerEditProfile" />
         <activity android:name=".FarmerHistory" />
-        <activity android:name=".FarmerViewHistoryDetail" />
         <activity android:name=".FarmerRequestPickupPickDate" />
         <activity android:name=".FarmerRequestPickupSetPickupLocation" />
         <activity android:name=".FarmerRequestPickupSetPickupLocationType" />
@@ -68,8 +66,8 @@
         <activity android:name=".TransporterSetAvailabilityLocationType" />
         <activity android:name=".FarmerMessages" />
         <activity android:name=".SignUpTransporterAddProfile"/>
-        <activity android:name=".SignUpSetCarInfoTransporter"/>
-        <activity android:name=".SignUpSetLocationTransporter"/>
+        <activity android:name=".SignUpTransporterSetCarInfo"/>
+        <activity android:name=".SignUpTransporterSetLocation"/>
         <activity android:name=".Loading"/>
     </application>
 
