--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,23 +19,23 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/agromovil_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/agromovil_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDSypbiDSbbZeikhCxs6_UYhfxvKMszglY" />
 
-        <activity android:name=".BeginSignUp">
+        <activity android:name=".FarmerHome">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FarmerHome" />
+        <activity android:name=".BeginSignUp" />
         <activity android:name=".SignUpFarmerSetLocation" />
         <activity android:name=".SignUpFarmerAddPhotos" />
         <activity android:name=".SignUpFarmerAddProfile" />
