--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="23" />
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -67,10 +66,11 @@
         <activity android:name=".TransporterSetAvailabilityLocation" />
         <activity android:name=".FarmerMessages" />
         <activity android:name=".FarmerMyMessages" />
-        <activity android:name=".SignUpTransporterAddProfile"/>
-        <activity android:name=".SignUpTransporterSetCarInfo"/>
-        <activity android:name=".SignUpTransporterSetLocation"/>
-        <activity android:name=".Loading"/>
+        <activity android:name=".SignUpTransporterAddProfile" />
+        <activity android:name=".SignUpTransporterSetCarInfo" />
+        <activity android:name=".SignUpTransporterSetLocation" />
+        <activity android:name=".Loading" />
+        <activity android:name=".farmerMyMessagesDetail"></activity>
     </application>
 
 </manifest>
