--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="23" />
-
-
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -68,15 +67,11 @@
         <activity android:name=".TransporterSetAvailabilityLocation" />
         <activity android:name=".TransporterAvailableTimes" />
         <activity android:name=".FarmerMessages" />
-        <activity android:name=".SignUpTransporterAddProfile"/>
-        <activity android:name=".SignUpTransporterSetCarInfo"/>
-        <activity android:name=".SignUpTransporterSetLocation"/>
-        <activity android:name=".Loading"/>
+        <activity android:name=".SignUpTransporterAddProfile" />
+        <activity android:name=".SignUpTransporterSetCarInfo" />
+        <activity android:name=".SignUpTransporterSetLocation" />
+        <activity android:name=".Loading" />
+        <activity android:name=".FarmerMessagesListView"></activity>
     </application>
-
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
 
 </manifest>
