--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,8 @@
         <activity android:name=".SignUpTransporterSetCarInfo" />
         <activity android:name=".SignUpTransporterSetLocation" />
         <activity android:name=".Loading" />
-        <activity android:name=".FarmerMessagesListView"></activity>
+        <activity android:name=".FarmerMessagesListView" />
+        <activity android:name=".TransporterMessagesListView"></activity>
     </application>
 
 </manifest>
