--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,13 @@
         android:maxSdkVersion="23" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
-        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@mipmap/agromovil_logo"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/agromovil_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -72,6 +73,24 @@
         <activity android:name=".SignUpTransporterSetCarInfo" />
         <activity android:name=".SignUpTransporterSetLocation" />
         <activity android:name=".Loading" />
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+
+         <service android:name=".MyFirebaseInstanceIDService">
+         <intent-filter>
+         <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+         </intent-filter>
+         </service>
+
     </application>
 
 </manifest>
